--- a/.env
+++ b/.env
@@ -1,1 +1,6 @@
+MY_DOMAIN=tpfinalmoncef.duckdns.org
+DUCKDNS_TOKEN=1409e9aa-ba98-4014-a26b-43d0b0a5ef42
+DB_PASSWORD=dbpassword
+DB_DATABASE=nextcloud
+DB_USER=nextcloud
 
